crates/auto-lang/test/cookbook/errors/003_backtrace/reference.rs
use std::backtrace::Backtrace;

fn main() -> Result<(), Box<dyn std::error::Error>> {
    let bt = Backtrace::capture();
    println!("Backtrace: {:?}", bt);
    Ok(())
}
